test/scc_test/decl/semantic-errors/042.t
void foo(restrict int a)
{
}